...
            self.showAlert.toggle()
        }
    }
    
    func getAlert() -> Alert {
        if postUploadedSuccessfully {
            return Alert(title: Text("Successfully uploaded post! 🥳"), message: nil, dismissButton: .default(Text("OK"), action: {
                dismiss()
            }))
        } else {
            return Alert(title: Text("Error uploading post😭"))
        }
    }
...
